fix branding on smaller screen sizes

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -138,6 +138,10 @@ main {
       justify-content: center !important;
     }
   }
+
+  .header-branding-logo {
+    width: 140px;
+  }
 }
 
 .col-left {
